# translate-patcher

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/translate-patcher-core/: Cargo.toml
crates/translate-patcher-core/src/: asar.rs  lib.rs  mtool.rs  patch.rs  scan.rs  tyrano.rs
crates/translate-patcher-tui/: Cargo.toml
crates/translate-patcher-tui/src/: main.rs
